fix scrollbar arrow color

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -45,7 +45,7 @@ canvas {
     top: -10px;
     border-left: 4px solid transparent;
     border-right: 4px solid transparent;
-    border-bottom: 4px solid black;
+    border-bottom: 4px solid var(--palette-primary-main);
 }
 
 /* Bottom arrow */
@@ -53,5 +53,5 @@ canvas {
     bottom: -10px;
     border-left: 4px solid transparent;
     border-right: 4px solid transparent;
-    border-top: 4px solid black;
+    border-top: 4px solid var(--palette-primary-main);
 }
